[package]
name = "anycoder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
notify = "8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
similar = "2.7.0"
imara-diff = "0.1.8"
async-openai = { version = "0.28.3", features = ["byot"] }
dotenv = "0.15.0"
indoc = "2.0.6"
